--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
      <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
-<!--livechat--!>
-    <!--Start of Tawk.to Script-->
+<!--livechat--!
+
+<!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
