--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="tentang-img">
+            <div class="menu-img">
                 <img src="img/maincourse/beefsteak.jpg" alt="Beef Steak">
             </div>
             <div class="content">
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="tentang-img">
+            <div class="menu-img">
                 <img src="img/dessert/classictiramisu.jpg" alt="Classic Tiramisu">
             </div>
             <div class="content">
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="tentang-img">
+            <div class="menu-img">
                 <img src="img/snack/frenchfries.jpg" alt="French Fries">
             </div>
             <div class="content">
@@ -141,7 +141,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="tentang-img">
+            <div class="menu-img">
                 <img src="img/drink/lattehot.jpg" alt="Lattehot">
             </div>
             <div class="content">
