--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
         <div class="row">
         <div class="tentang-img">
-            <img src="img/backgroundtr.jpeg" alt="Tentang Kami">
+            <img src="img/" alt="Tentang Kami">
         </div>
         <div class="content">
             <h3>Taman Bunga</h3>
@@ -77,7 +77,7 @@
     </div>
     <div class="row">
         <div class="tentang-img">
-            <img src="img/backgroundtr.jpeg" alt="Tentang Kami">
+            <img src="img/" alt="Tentang Kami">
         </div>
         <div class="content">
             <h3>Lantai 3 </h3>
@@ -86,7 +86,7 @@
     </div>
     <div class="row">
         <div class="tentang-img">
-            <img src="img/backgroundtr.jpeg" alt="Tentang Kami">
+            <img src="img/" alt="Tentang Kami">
         </div>
         <div class="content">
             <h3>Vip Club Room</h3>
