--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
        <section id="menu" class="menu">
         <h2><span>Menu</span> Kami</h2>
         <div class="row">
-            <div class="tentang-img">
+            <div class="menu-img">
                 <img src="img/appertizer/thaiprawnsalad.jpg" alt="Thai Prawn Salad">
             </div>
             <div class="content">
