--- a/navigasi/appetizer.html
+++ b/navigasi/appetizer.html
@@ -12,6 +12,8 @@
 
      <!-- my styles -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="../test/img/logo.jpg">
 
     <!-- icons -->
      <script src="https://unpkg.com/feather-icons"></script>
@@ -25,7 +27,6 @@
      <div class="navbar-nav">
         <a href="#beranda">Beranda</a>
         <a href="#menu">Menu</a>
-        <a href="#produk">Produk</a>
         <a href="#reservasi">Reservasi</a>
         <a href="#event">Event</a>
         <a href="#tentang">Tentang</a>
@@ -41,48 +42,69 @@
      <!-- Navbar end -->
 
 
-      <!-- appertizer  -->
-       <section id="tentang" class="tentang">
-        <h2><span>Our</span> Appertizer</h2>
+     <!-- Seksi Hero -->
+      <!-- End seksi hero -->
 
-        <div class="row">
-        <div class="tentang-img">
-            <img src="img/backgroundtr.jpeg" alt="Tentang Kami">
-        </div>
-        <div class="content">
-            <h3>Outdoor View</h3>
-            <p>Menikmati momen relaxing anda di outdoor place kami</p>
-        </div>
-    </div>
-        <div class="row">
-        <div class="tentang-img">
-            <img src="img/backgroundtr.jpeg" alt="Tentang Kami">
-        </div>
-        <div class="content">
-            <h3>Taman Bunga</h3>
-            <p>Bersantai di tempat yang di penuhi dengan bunga</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="tentang-img">
-            <img src="img/backgroundtr.jpeg" alt="Tentang Kami">
-        </div>
-        <div class="content">
-            <h3>Lantai 3 </h3>
-            <p>Menikmati pemandangan alam gunung lokon dan gunung mahawu di hiasi langit cerah</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="tentang-img">
-            <img src="img/backgroundtr.jpeg" alt="Tentang Kami">
-        </div>
-        <div class="content">
-            <h3>Vip Club Room</h3>
-            <p>Menikmati live musik dan perform event DJ party</p>
-        </div>
-    </div>
-       </section>
       <!-- tentang tanaraya  -->
+      <!-- tentang tanaraya  -->
+
+
+      <!-- menu seksi -->
+       <section id="menu" class="menu">
+        <h2><span>Appe</span> tizer</h2>
+        <div class="row">
+            <div class="menu-img">
+                <img src="img/appertizer/thaiprawnsalad.jpg" alt="Thai Prawn Salad">
+            </div>
+            <div class="content">
+                <h3>Appertizer</h3>
+                <p>Appetizer (makanan pembuka) biasanya disajikan sebelum hidangan utama. Bertujuannya buat membuka selera makan orang (makanya kadang disebut juga "hors d'oeuvre" dalam bahasa Prancis)</p>
+                <a href="appertizer.html" class="cta">Lihat Semua</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="menu-img">
+                <img src="img/maincourse/beefsteak.jpg" alt="Beef Steak">
+            </div>
+            <div class="content">
+                <h3>Main Course</h3>
+                <p>Main course atau hidangn utama dalam satu set makan lengkap—biasanya paling berat dan paling mengenyangkan dibandingkan hidangan lainnya.contohnya seperti "Beef steak"</p>
+                <a href="maincourse.html" class="cta">Lihat Semua</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="menu-img">
+                <img src="img/dessert/classictiramisu.jpg" alt="Classic Tiramisu">
+            </div>
+            <div class="content">
+                <h3>Dessert</h3>
+                <p>Dessert atau makanan penutup yang biasanya disajikan setelah hidangan utama. Ciri khasnya manis, tapi ada juga yang dingin, creamy, atau segar.</p>
+                <a href="dessert.html" class="cta">Lihat Semua</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="menu-img">
+                <img src="img/snack/frenchfries.jpg" alt="French Fries">
+            </div>
+            <div class="content">
+                <h3>Snack</h3>
+                <p>Snack (makanan ringan) yang biasanya dimakan di luar waktu makan utama—buat ganjel perut,menemani saat ngopi, atau sekadar ngemil aja.</p>
+                <a href="snack.html" class="cta">Lihat Semua</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="menu-img">
+                <img src="img/drink/lattehot.jpg" alt="Lattehot">
+            </div>
+            <div class="content">
+                <h3>Drinks</h3>
+                <p>Drink(minuman) dalam finedining sering disajikan 
+                    air putih,teh,dan kopi.dalam beberapa kasus findining juga menyajikan wine</p>
+                <a href="drink.html" class="cta">Lihat Semua</a>
+            </div>
+        </div>
+       </section>
+      <!-- end menu seksi -->
     <!-- icons feather -->
      <script>
         feather.replace()
