--- a/navigasi/appetizer.html
+++ b/navigasi/appetizer.html
@@ -41,70 +41,77 @@
     </nav>
      <!-- Navbar end -->
 
+<!--Appetizer-->
+  <!-- Products Section start -->
+  <section class="products" id="products">
+    <h2><span>Produk Unggulan</span> Kami</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo unde eum, ab fuga possimus iste.</p>
 
-     <!-- Seksi Hero -->
-      <!-- End seksi hero -->
+    <div class="row">
+      <div class="product-card">
+        <div class="product-icons">
+          <a href="#"><i data-feather="shopping-cart"></i></a>
+          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+        </div>
+        <div class="product-image">
+          <img src="img/products/1.jpg" alt="Product 1">
+        </div>
+        <div class="product-content">
+          <h3>Coffee Beans 1</h3>
+          <div class="product-stars">
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star"></i>
+          </div>
+          <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+        </div>
+      </div>
+      <div class="product-card">
+        <div class="product-icons">
+          <a href="#"><i data-feather="shopping-cart"></i></a>
+          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+        </div>
+        <div class="product-image">
+          <img src="img/products/1.jpg" alt="Product 1">
+        </div>
+        <div class="product-content">
+          <h3>Coffee Beans 1</h3>
+          <div class="product-stars">
+            <i data-feather="star"></i>
+            <i data-feather="star"></i>
+            <i data-feather="star"></i>
+            <i data-feather="star"></i>
+            <i data-feather="star"></i>
+          </div>
+          <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+        </div>
+      </div>
+      <div class="product-card">
+        <div class="product-icons">
+          <a href="#"><i data-feather="shopping-cart"></i></a>
+          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+        </div>
+        <div class="product-image">
+          <img src="img/products/1.jpg" alt="Product 1">
+        </div>
+        <div class="product-content">
+          <h3>Coffee Beans 1</h3>
+          <div class="product-stars">
+            <i data-feather="star"></i>
+            <i data-feather="star"></i>
+            <i data-feather="star"></i>
+            <i data-feather="star"></i>
+            <i data-feather="star"></i>
+          </div>
+          <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Products Section end -->
 
-      <!-- tentang tanaraya  -->
-      <!-- tentang tanaraya  -->
-
-
-      <!-- menu seksi -->
-       <section id="menu" class="menu">
-        <h2><span>Appe</span> tizer</h2>
-        <div class="row">
-            <div class="menu-img">
-                <img src="img/appertizer/thaiprawnsalad.jpg" alt="Thai Prawn Salad">
-            </div>
-            <div class="content">
-                <h3>Appertizer</h3>
-                <p>Appetizer (makanan pembuka) biasanya disajikan sebelum hidangan utama. Bertujuannya buat membuka selera makan orang (makanya kadang disebut juga "hors d'oeuvre" dalam bahasa Prancis)</p>
-                <a href="appertizer.html" class="cta">Lihat Semua</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="menu-img">
-                <img src="img/maincourse/beefsteak.jpg" alt="Beef Steak">
-            </div>
-            <div class="content">
-                <h3>Main Course</h3>
-                <p>Main course atau hidangn utama dalam satu set makan lengkap—biasanya paling berat dan paling mengenyangkan dibandingkan hidangan lainnya.contohnya seperti "Beef steak"</p>
-                <a href="maincourse.html" class="cta">Lihat Semua</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="menu-img">
-                <img src="img/dessert/classictiramisu.jpg" alt="Classic Tiramisu">
-            </div>
-            <div class="content">
-                <h3>Dessert</h3>
-                <p>Dessert atau makanan penutup yang biasanya disajikan setelah hidangan utama. Ciri khasnya manis, tapi ada juga yang dingin, creamy, atau segar.</p>
-                <a href="dessert.html" class="cta">Lihat Semua</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="menu-img">
-                <img src="img/snack/frenchfries.jpg" alt="French Fries">
-            </div>
-            <div class="content">
-                <h3>Snack</h3>
-                <p>Snack (makanan ringan) yang biasanya dimakan di luar waktu makan utama—buat ganjel perut,menemani saat ngopi, atau sekadar ngemil aja.</p>
-                <a href="snack.html" class="cta">Lihat Semua</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="menu-img">
-                <img src="img/drink/lattehot.jpg" alt="Lattehot">
-            </div>
-            <div class="content">
-                <h3>Drinks</h3>
-                <p>Drink(minuman) dalam finedining sering disajikan 
-                    air putih,teh,dan kopi.dalam beberapa kasus findining juga menyajikan wine</p>
-                <a href="drink.html" class="cta">Lihat Semua</a>
-            </div>
-        </div>
-       </section>
-      <!-- end menu seksi -->
     <!-- icons feather -->
      <script>
         feather.replace()
