--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="content">
                 <h3>Appertizer</h3>
                 <p>Appetizer (makanan pembuka) biasanya disajikan sebelum hidangan utama. Bertujuannya buat membuka selera makan orang (makanya kadang disebut juga "hors d'oeuvre" dalam bahasa Prancis)</p>
-                <a href="navigasi/appertizer.html" class="cta">Lihat Semua</a>
+                <a href="../navigasi/appertizer.html" class="cta">Lihat Semua</a>
             </div>
         </div>
         <div class="row">
