--- a/navigasi/appetizer.html
+++ b/navigasi/appetizer.html
@@ -11,7 +11,7 @@
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap">
 
      <!-- my styles -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="../test/img/logo.jpg">
 
