--- a/navigasi/appetizer.html
+++ b/navigasi/appetizer.html
@@ -117,6 +117,6 @@
         feather.replace()
      </script>
      <!-- my java -->
-      <script src="../js/script.js"></script>
+      <script src="js/script.js"></script>
 </body>
 </html>
