--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 <div class="col-lg-4 col-sm-6 dish-box-wp breakfast" data-cat="breakfast">
                                     <div class="dish-box text-center">
                                         <div class="dist-img">
-                                            <img src="assets/images/dish/Main/beefsteak.png" style="height:300px ;" alt="">
+                                            <img src="assets/images/dish/Main/beefsteak.png" style="background: transparent;" alt="">
                                         </div>
                                         <div class="dish-rating">
                                             5
@@ -736,8 +736,7 @@
                                                 <h3 class="h3-title">
                                                     Nilay Hirpara
                                                 </h3>
-                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque,
-                                                    quisquam.</p>
+                                                <p>Food is delicious and nice place for relaxing enjoy the nature at outdoor.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -758,8 +757,7 @@
                                                 <h3 class="h3-title">
                                                     Ravi Kumawat
                                                 </h3>
-                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque,
-                                                    quisquam.</p>
+                                                <p>I like the party weekend at VIP Club room, the moment is great and awesome, nice DJ also.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -780,8 +778,7 @@
                                                 <h3 class="h3-title">
                                                     Navnit Kumar
                                                 </h3>
-                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque,
-                                                    quisquam.</p>
+                                                <p>Third floor is most beautiful view i can see everything of city above here and great mountain view.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -802,8 +799,7 @@
                                                 <h3 class="h3-title">
                                                     Somyadeep Bhowmik
                                                 </h3>
-                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque,
-                                                    quisquam.</p>
+                                                <p>The services is so kind and good, i feel happy enjoy my holiday here.</p>
                                             </div>
                                         </div>
                                     </div>
