--- a/index.html
+++ b/index.html
@@ -554,11 +554,11 @@
                             <div class="swiper-wrapper">
                                 <div class="col-lg-4 swiper-slide">
                                     <div class="team-box text-center">
-                                        <div style="background-image: url(assets/images/chef/c1.jpg);"
+                                        <div style="background-image: url(assets/images/chef/cgerry.jpg);"
                                             class="team-img back-img">
 
                                         </div>
-                                        <h3 class="h3-title">Nilay Hirpara</h3>
+                                        <h3 class="h3-title">Head Chef Gerry</h3>
                                         <div class="social-icon">
                                             <ul>
                                                 <li>
