--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@
                                                             <ul>
                                                                 <li>
                                                                     <p>Type</p>
-                                                                    <b>Hot</b>
+                                                                    <b>Ice</b>
                                                                 </li>
                                                                 <li>
                                                                     <p>Persons</p>
