--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@
                                                             <ul>
                                                                 <li>
                                                                     <p>Type</p>
-                                                                    <b>Ice</b>
+                                                                    <b>Hot</b>
                                                                 </li>
                                                                 <li>
                                                                     <p>Persons</p>
@@ -1691,6 +1691,20 @@
                                                 <img src="logo.png" alt="">
                                             </a>
                                         </div>
+                                          <!-- Contact Section start -->
+  <section id="contact" class="contact">
+    <h2><span>Our</span> Location</h2>
+    <p>Tanaraya, Jl. Lkr. Bar., Kakaskasen Dua, North Tomohon District, Tomohon City, North Sulawesi 95415
+    </p>
+
+    <div class="row">
+      <iframe
+        src="https://www.google.com/maps/embed/v1/search?q=tanaraya&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"
+        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+
+    </div>
+  </section>
+  <!-- Contact Section end -->
                                         <p>Follow us in social media below.
                                         </p>
                                         <div class="social-icon">
